# ai-xmind

./: .env.example  .gitignore  README.md  SPEC.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/expand/: route.ts
src/app/api/ai/generate/: route.ts
src/app/editor/[id]/: page.tsx
src/components/AI/: AIExpandModal.tsx  AIGenerateModal.tsx
src/components/Dashboard/: CreateModal.tsx  ExportModal.tsx  ImportModal.tsx  MindMapCard.tsx  TemplateModal.tsx
src/components/MindMap/: Canvas.tsx  EnhancedCanvas.tsx  EnhancedToolbar.tsx  Node.tsx  Toolbar.tsx
src/components/UI/: Button.tsx  Input.tsx  Modal.tsx
src/lib/: ai-config.ts  ai-service.ts  store.ts  tauri.ts  types.ts  utils.ts  xmind-parser.ts
