[package]
name = "mindskill"
version = "0.1.0"
description = "Mindskill - AI智能思维导图工具"
authors = ["Mindskill Team"]
license = "MIT"
repository = "https://github.com/AIPMAndy/mindskill"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mindskill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
